Project Update UI added Cash Flow Statement UI added Balance Sheet UI added

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
 
+
+tr td:last-child {
+  width: 1%;
+  white-space: nowrap;
+}
+th {
+  white-space: nowrap;
+}
+
+
 /************** Activity***********/
 .DatePicker{
     /* width: 100%; */
