--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+/* ******** Table  */
+
+.tableFreezeOption td,
+.tableFreezeOption th {
+  background: #fff;
+  /* border: 1px solid red; */
+}
+th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+.tableFreezeOption th:first-child {
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+  z-index: 1;
+  background: white;
+}
+.tableFreezeOption thead th:first-child {
+  z-index: 2;
+}
+.tableFreezeOption{
+  border: 1px solid #f1f1f1;
+}
+/* *****Table */
+
 .buttonColorPrimary {
   color: #0a6862;
 }
@@ -60,6 +87,7 @@ th {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .popup-inner {
