--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   
 }
 .tableHeaderStyle th{
-  background-color: black;
+  background-color: #c8093b;
   color: white;
 }
 .tableFirstThStyle th{
@@ -49,7 +49,7 @@
   z-index: 2;
 }
 .tableFreezeOption{
-  /* border: 1px solid #f1f1f1; */
+  /* border: 1px solid #234c82; */
 }
 /* *****Table */
 
